2007-03-26 [iwkse]	0.2.0cvs61

	* src/poppler_viewer.c
			*fixed double update call

2007-03-25 [colin]	0.2.0cvs60

	* src/Makefile.am
		Fix dist

2007-03-25 [iwkse]	0.2.0cvs59

	* src/poppler_viewer.h
	* src/poppler_viewer.c
			fix wrongly added static functions in header

2007-03-25 [iwkse]	0.2.0cvs58

	* src/poppler_viewer.c
	* src/poppler_viewer.h
			good consistance's names 

2007-03-25 [colin]	0.2.0cvs57

	* src/poppler_viewer.c
	* src/poppler_viewer.h
		Keep current highlight after zooming/rotating
		Delete last highlight if searching for non-existing
		text
		Fix busy cursor if searching for non-existing text

2007-03-24 [iwkse]	0.2.0cvs56

	* src/poppler_viewer.c
	* src/poppler_viewer.h
			Removing unused headers
			Make code more readable

2007-03-24 [iwkse]	0.2.0cvs55

	* src/poppler_viewer.h
	* src/poppler_viewer.c
			removing unused headers
			make code more readable

2007-03-24 [iwkse]	0.2.0cvs54

	* src/poppler_viewer.c
	* src/poppler_viewer.h
			renaming a function to fit the other's name

2007-03-24 [iwkse]	0.2.0cvs53

	* src/poppler_viewer.c
	* src/poppler_viewer.h
			* add Header file

2007-03-24 [colin]	0.2.0cvs52

	* src/poppler_viewer.c
		Scroll to the correct X value too

2007-03-24 [colin]	0.2.0cvs51

	* src/poppler_viewer.c
		Handle rotation

2007-03-24 [colin]	0.2.0cvs50

	* src/poppler_viewer.c
		Fix back scroll when searching

2007-03-24 [colin]	0.2.0cvs49

	* src/poppler_viewer.c
		Handle search when zoomed, scroll to result (not perfect yet)

2007-03-24 [iwkse]	0.2.0cvs48

	* src/poppler_viewer.c
			* fix selection: no more rainbows

2007-03-24 [iwkse]	0.2.0cvs47

	* src/poppler_viewer.c
			*fixed rainbow selection

2007-03-23 [iwkse]	0.2.0cvs46

	* src/poppler_viewer.c
			extract fpdf_viewer_render_selection
			from the search function.

2007-03-23 [iwkse]	0.2.0cvs45

	* src/poppler_viewer.c
			We want to use poppler but
			our plugin will be PdfViewer

2007-03-23 [iwkse]	0.2.0cvs44

	* src/poppler_viewer.c