@@ -1,3 +1,9 @@
+2007-03-26 [iwkse]	0.2.0cvs62
+
+	* src/poppler_viewer.c
+	* src/poppler_viewer.h
+			Add a spin for zooming
+
 2007-03-26 [iwkse]	0.2.0cvs61
 
 	* src/poppler_viewer.c
